Fix HTML link formatting in index.html

--- a/wexmac/index.html
+++ b/wexmac/index.html
@@ -4,7 +4,7 @@
   I hate computers. This page was displaying data wrong, sorry. I'll put it back up once I fix. 
   
   For now if you're looking for newest task orders run this script: 
-  <a href="https://github.com/JonGerhardson/JonGerhardson.github.io/blob/main/wexmac/scripts/fetch_wexmac_task_orders_fpds.py>fetch_wexmac_task_orders_fpds.py</a> <br>
+  <a href="https://github.com/JonGerhardson/JonGerhardson.github.io/blob/main/wexmac/scripts/fetch_wexmac_task_orders_fpds.py>fetch_wexmac_task_orders_fpds.py"</a> <br>
 
 Feb. 19, 2026
 ======================================================================
