--- a/wexmac/index.html
+++ b/wexmac/index.html
@@ -1,10 +1,14 @@
-
 <html>
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
+<pre>
+I hate computers. This page was displaying data wrong, sorry. I'll put it back up once I fix.
 
-  I hate computers. This page was displaying data wrong, sorry. I'll put it back up once I fix. 
-  
-  For now if you're looking for newest task orders run this script: 
-https://github.com/JonGerhardson/JonGerhardson.github.io/blob/main/wexmac/scripts/fetch_wexmac_task_orders_fpds.py
+For now if you're looking for newest task orders run this script:
+<a href="https://github.com/JonGerhardson/JonGerhardson.github.io/blob/main/wexmac/scripts/fetch_wexmac_task_orders_fpds.py">fetch_wexmac_task_orders_fpds.py</a>
+
 Feb. 19, 2026
 ======================================================================
 
@@ -323,9 +327,9 @@ THIS IS A CON
 
        N6817125F2073 | DELIVERY ORDER | $9,094.93 | LODGING, CONFERENCE, AND CATERING SERVIC
 
-       W911S825FA251 | DELIVERY ORDER | $229,379.96 | THIS TASK ORDER IS FOR CATERING AND ICE SERVICES. FOR FURTHER DETAILS 
+       W911S825FA251 | DELIVERY ORDER | $229,379.96 | THIS TASK ORDER IS FOR CATERING AND ICE SERVICES. FOR FURTHER DETAILS
 
-       W911S825FA251 | DELIVERY ORDER | $4,500.00 | THIS TASK ORDER IS FOR CATERING AND ICE SERVICES. FOR FURTHER DETAILS 
+       W911S825FA251 | DELIVERY ORDER | $4,500.00 | THIS TASK ORDER IS FOR CATERING AND ICE SERVICES. FOR FURTHER DETAILS
 
        W9124J25FA007 | DELIVERY ORDER | $102,138.00 | LODGING AND LAUNDRY SERVICE-ALAMO
 
@@ -383,7 +387,7 @@ THIS IS A CON
 
        N0002325F0047 | DELIVERY ORDER | $500.00 | THIS WEXMAC TASK ORDER FULFILLS MINIMUM GUARANTEE REQUIREMENTS. WEXMAC
 
-       N0002325F0090 | DELIVERY ORDER | $257,468.50 | LSE25 RESERVE RSOI @ UNITED STATES OF AMERICA (CONTINENTAL, INCLUDING 
+       N0002325F0090 | DELIVERY ORDER | $257,468.50 | LSE25 RESERVE RSOI @ UNITED STATES OF AMERICA (CONTINENTAL, INCLUDING
 
        N0002325F0090 | DELIVERY ORDER | $60,451.35 | THE PURPOSE OF THIS MODIFICATION IS TO INCREASE LODGING AND BUS SERVIC
 
@@ -393,9 +397,9 @@ THIS IS A CON
 
        N6883625FS076 | DELIVERY ORDER | $8,812.80 | RCP FOR 16 DOUBLE OCCUPANCY HOTEL ROOMS IN COCOA BEACH FL TO SUPPORT S
 
-       N6883625FS105 | DELIVERY ORDER | $16,124.16 | REQUEST FOR LODGING FOR SAILORS JULY 17TH TO 21ST. ACCOMMODATIONS NOT 
+       N6883625FS105 | DELIVERY ORDER | $16,124.16 | REQUEST FOR LODGING FOR SAILORS JULY 17TH TO 21ST. ACCOMMODATIONS NOT
 
-       N6883625FS105 | DELIVERY ORDER | $0.00 | REQUEST FOR LODGING FOR SAILORS JULY 17TH TO 21ST. ACCOMMODATIONS NOT 
+       N6883625FS105 | DELIVERY ORDER | $0.00 | REQUEST FOR LODGING FOR SAILORS JULY 17TH TO 21ST. ACCOMMODATIONS NOT
 
        N6883625FS183 | DELIVERY ORDER | $62,251.82 | UNITAS OPENING CEREMONY ON BOARD USS ARLINGTON
 
@@ -501,15 +505,15 @@ THIS IS A CON
 
        W564KV25FA030 | DELIVERY ORDER | $44,833.00 | IMMEDIATE RESPONSE 25, CAMP DALIPI, GRC
 
-       W912PB25FA029 | DELIVERY ORDER | $560,848.35 | CAMP LEST, SLOVAKIA BASE LIFE SUPPORT AND CATERING SERVICES 
+       W912PB25FA029 | DELIVERY ORDER | $560,848.35 | CAMP LEST, SLOVAKIA BASE LIFE SUPPORT AND CATERING SERVICES
 
 POP: 01 F
 
-       W912PB25FA029 | DELIVERY ORDER | $281,542.23 | CAMP LEST, SLOVAKIA BASE LIFE SUPPORT AND CATERING SERVICES 
+       W912PB25FA029 | DELIVERY ORDER | $281,542.23 | CAMP LEST, SLOVAKIA BASE LIFE SUPPORT AND CATERING SERVICES
 
 POP: 01 F
 
-       W912PB25FA029 | DELIVERY ORDER | $760.64 | CAMP LEST, SLOVAKIA BASE LIFE SUPPORT AND CATERING SERVICES 
+       W912PB25FA029 | DELIVERY ORDER | $760.64 | CAMP LEST, SLOVAKIA BASE LIFE SUPPORT AND CATERING SERVICES
 
 POP: 01 F
 
@@ -546,22 +550,22 @@ POP: 01 F
        W912PB25FA305 | DELIVERY ORDER | $616,913.91 | AGILE SPIRIT 25: EXERCISE SUPPORT, LSA FIELD SERVICES - GEORGIA
 
 
-POP: 
+POP:
 
        W912PB25FA305 | DELIVERY ORDER | $7,535.16 | AGILE SPIRIT 25: EXERCISE SUPPORT, LSA FIELD SERVICES - GEORGIA
 
 
-POP: 
+POP:
 
        W912PB25FA305 | DELIVERY ORDER | $-95,533.82 | AGILE SPIRIT 25: EXERCISE SUPPORT, LSA FIELD SERVICES - GEORGIA
 
 
-POP: 
+POP:
 
        W912PB25FA305 | DELIVERY ORDER | $120,176.52 | AGILE SPIRIT 25: EXERCISE SUPPORT, LSA FIELD SERVICES - GEORGIA
 
 
-POP: 
+POP:
 
        W912PB25FA306 | DELIVERY ORDER | $18,045.72 | MIROSLAWEIC GUNNERY RTOP TO PROVIDE SERVICE TO THREE DIFFERENT LOCATIO
 
@@ -572,8 +576,6 @@ POP:
        W912PF25FA041 | DELIVERY ORDER | $74,876.68 | THIS IS A NON-PERSONNEL SERVICE(S) CONTRACT PROVIDING LOGISTICAL SUPPO
 
        W912PF25FA041 | DELIVERY ORDER | $0.00 | THIS IS A NON-PERSONNEL SERVICE(S) CONTRACT PROVIDING LOGISTICAL SUPPO
-
-       W912PF25FA041 | DELIVERY ORDER | $3,624.86 | THIS IS A NON-PERSONNEL SERVICE(S) CONTRACT PROVIDING LOGISTICAL SUPPO
 
        W912PF25FA041 | DELIVERY ORDER | $0.00 | THIS IS A NON-PERSONNEL SERVICE(S) CONTRACT PROVIDING LOGISTICAL SUPPO
 
@@ -595,9 +597,9 @@ POP:
 
        N0002325F0051 | DELIVERY ORDER | $500.00 | THIS WEXMAC TASK ORDER FULFILLS MINIMUM GUARANTEE REQUIREMENTS. WEXMAC
 
-       W9124J25FA038 | DELIVERY ORDER | $51,935.00 | SERVICES FOR THE STORAGE OF FOOD, ACCOUNTABILITY OF FOOD PREPARATION, 
+       W9124J25FA038 | DELIVERY ORDER | $51,935.00 | SERVICES FOR THE STORAGE OF FOOD, ACCOUNTABILITY OF FOOD PREPARATION,
 
-       W9124J25FA038 | DELIVERY ORDER | $27,499.36 | SERVICES FOR THE STORAGE OF FOOD, ACCOUNTABILITY OF FOOD PREPARATION, 
+       W9124J25FA038 | DELIVERY ORDER | $27,499.36 | SERVICES FOR THE STORAGE OF FOOD, ACCOUNTABILITY OF FOOD PREPARATION,
 
 [26/136] Loyal Source Government Services LLC (N0002325D0052)
 
@@ -631,11 +633,11 @@ POP:
 
        N6264925FM121 | DELIVERY ORDER | $617.40 | CLASS IV  CONSTRUCTION MATERIALS SUPPLY
 
-       N6264925FMA09 | DELIVERY ORDER | $22,046.85 | THE CONTRACTOR SHALL PROVIDE LOGISTICS AND TRANSPORTATION SERVICES TO 
+       N6264925FMA09 | DELIVERY ORDER | $22,046.85 | THE CONTRACTOR SHALL PROVIDE LOGISTICS AND TRANSPORTATION SERVICES TO
 
-       N6264925FMA09 | DELIVERY ORDER | $1,993.95 | THE CONTRACTOR SHALL PROVIDE LOGISTICS AND TRANSPORTATION SERVICES TO 
+       N6264925FMA09 | DELIVERY ORDER | $1,993.95 | THE CONTRACTOR SHALL PROVIDE LOGISTICS AND TRANSPORTATION SERVICES TO
 
-       N6264925FMA09 | DELIVERY ORDER | $0.00 | THE CONTRACTOR SHALL PROVIDE LOGISTICS AND TRANSPORTATION SERVICES TO 
+       N6264925FMA09 | DELIVERY ORDER | $0.00 | THE CONTRACTOR SHALL PROVIDE LOGISTICS AND TRANSPORTATION SERVICES TO
 
        N6264925FMA18 | DELIVERY ORDER | $1,512.00 | RENTAL OF CELLULAR PHONES AND WIFI
 
@@ -669,7 +671,7 @@ AF02, CELLULAR PHONES AND AF04 WIFI
 
        N0024426FS011 | DELIVERY ORDER | $5,977.85 | FOOD ORDER ST LOUIS /PROGRESO, MEXICO
 
-       N4033925FD003 | DELIVERY ORDER | $57,300.00 | INTERNATIONAL AIRPORT HANGAR SPACE SERVICE FOR MULTI MISSION SQUADRON 
+       N4033925FD003 | DELIVERY ORDER | $57,300.00 | INTERNATIONAL AIRPORT HANGAR SPACE SERVICE FOR MULTI MISSION SQUADRON
 
        N4033925FD004 | DELIVERY ORDER | $1,712,699.76 | AIRPORT GROUND SERVICES KING FAISAL NAVAL BASE
 
@@ -703,9 +705,9 @@ AF02, CELLULAR PHONES AND AF04 WIFI
 
        N6883625FS104 | DELIVERY ORDER | $4,064.35 | USNS COMFORT SIK, PUERTO PLATA, DOMINICAN REPUBLIC, RDD 17 JULY 2025
 
-       N6883625FS104 | DELIVERY ORDER | $0.00 | USNS COMFORT SIK, PUERTO PLATA, DOMINICAN REPUBLIC, RDD 18 JULY 2025, 
+       N6883625FS104 | DELIVERY ORDER | $0.00 | USNS COMFORT SIK, PUERTO PLATA, DOMINICAN REPUBLIC, RDD 18 JULY 2025,
 
-       N6883625FS104 | DELIVERY ORDER | $0.00 | USNS COMFORT SIK, PUERTO PLATA, DOMINICAN REPUBLIC, RDD 18 JULY 2025, 
+       N6883625FS104 | DELIVERY ORDER | $0.00 | USNS COMFORT SIK, PUERTO PLATA, DOMINICAN REPUBLIC, RDD 18 JULY 2025,
 
        N6883625FS117 | DELIVERY ORDER | $5,739.32 | USNS COMFORT SIK PORT OF PRINCE, TRINIDAD AND TOBAGO
 
@@ -859,7 +861,7 @@ AF02, CELLULAR PHONES AND AF04 WIFI
 
        N6264925FMA23 | DELIVERY ORDER | $1,038.25 | TRANSPORTATION AND COMMUNICATIONS REQUIREMENTS IN SUPPORT OF CARAT TIM
 
-       N6264926FM006 | DELIVERY ORDER | $0.00 | LODGING SERVICE IN SUPPORT OF USS MIGUEL KEITH CIVIL SERVICE MARINERS 
+       N6264926FM006 | DELIVERY ORDER | $0.00 | LODGING SERVICE IN SUPPORT OF USS MIGUEL KEITH CIVIL SERVICE MARINERS
 
        N6264926FM012 | DELIVERY ORDER | $0.00 | THE CONTRACTOR SHALL PROVIDE ROOM ACCOMMODATION IN ACCORDANCE WITH THE
 
@@ -875,7 +877,7 @@ AF02, CELLULAR PHONES AND AF04 WIFI
 
        N6817125F4001 | DELIVERY ORDER | $1,999,287.50 | AMFS PHASE 1 LODGING, MEALS, CONFERENCE ROOM
 
-       N6883625F0075 | DELIVERY ORDER | $13,440.00 | LODGING IN SUPPORT OF USS UNIT WITH PERIOD OF PERFORMANCE 14-22 APRIL 
+       N6883625F0075 | DELIVERY ORDER | $13,440.00 | LODGING IN SUPPORT OF USS UNIT WITH PERIOD OF PERFORMANCE 14-22 APRIL
 
        N6883625F0075 | DELIVERY ORDER | $-1,680.00 | LODGING, CONFERENCE, AND CATERING SERVIC
 
@@ -939,9 +941,9 @@ AF02, CELLULAR PHONES AND AF04 WIFI
 
        W9115125FA151 | DELIVERY ORDER | $0.00 | 2ABCT REQUEST MATERIAL HANDLING EQUIPMENT (MHE) SERVICES WITH OPERATOR
 
-       W9124J25FA077 | DELIVERY ORDER | $1,301,852.84 | CONTRACTOR SHALL PROVIDE NON-PERSONAL SERVICES TO THE GOVERNMENT WITH 
+       W9124J25FA077 | DELIVERY ORDER | $1,301,852.84 | CONTRACTOR SHALL PROVIDE NON-PERSONAL SERVICES TO THE GOVERNMENT WITH
 
-       W9124J25FA077 | DELIVERY ORDER | $-178,159.16 | CONTRACTOR SHALL PROVIDE NON-PERSONAL SERVICES TO THE GOVERNMENT WITH 
+       W9124J25FA077 | DELIVERY ORDER | $-178,159.16 | CONTRACTOR SHALL PROVIDE NON-PERSONAL SERVICES TO THE GOVERNMENT WITH
 
        W9124J25FA081 | DELIVERY ORDER | $763,766.24 | ARCTIC EDGE 25 LSA ALCOM
 
@@ -1106,8 +1108,6 @@ AF02, CELLULAR PHONES AND AF04 WIFI
        M2900025F0008 | DELIVERY ORDER | $27,428.77 | BASE OPERATIONS AND LIFE SUPPORT SERVICE
 
        M2900025F0010 | DELIVERY ORDER | $107,203.55 | BASE OPERATIONS AND LIFE SUPPORT SERVICE
-
-       M2900025F3001 | DELIVERY ORDER | $24,960.00 | MHE, LOGISTICS AND TRANSPORTATION SERVICES - ISHIGAKI
 
        M2900026F5000 | DELIVERY ORDER | $0.00 | FORCE PROTECTION SERVICES
 
@@ -1311,7 +1311,7 @@ AF02, CELLULAR PHONES AND AF04 WIFI
 
        N6883625FS027 | DELIVERY ORDER | $-12,936.03 | USS NORMANDY SIK RDD 21APRIL2025 CARTAGENA, COLOMBIA
 
-       N6883625FS030 | DELIVERY ORDER | $140,741.66 | EXPEDITIONARY CONTRACT IN SUPPORT OF CONTINUING PROMISE 25 GRENADA
+       N6883625FS030 | DELIVERY ORDER | $138,150.00 | EXPEDITIONARY CONTRACT IN SUPPORT OF CONTINUING PROMISE 25 GRENADA
 
        N6883625FS030 | DELIVERY ORDER | $24,447.00 | EXPEDITIONARY CONTRACT IN SUPPORT OF CONTINUING PROMISE 25 GRENADA***M
 
@@ -1347,7 +1347,7 @@ AF02, CELLULAR PHONES AND AF04 WIFI
 
        N6883625FS106 | DELIVERY ORDER | $58,699.25 | USNS COMFORT SIK PUERTO PLATA, DOMINICAN REPUBLIC, RDD JULY 19, 2025
 
-       N6883625FS106 | DELIVERY ORDER | $-31,442.87 | USNS COMFORT SIK PUERTO PLATA, DOMINICAN REPUBLIC, RDD JULY 19, 2025, 
+       N6883625FS106 | DELIVERY ORDER | $-31,442.87 | USNS COMFORT SIK PUERTO PLATA, DOMINICAN REPUBLIC, RDD JULY 19, 2025,
 
        N6883625FS109 | DELIVERY ORDER | $8,147.06 | USS MINNEAPOLIS ST. PAUL - SIK - PONCE, PUERTO RICO - 30 JULY 2025
 
@@ -2033,9 +2033,6 @@ FPDS WEXMAC TASK ORDER FETCH COMPLETE
   IDVs with task orders: 47
 
   Total task orders:     564
-</htmnl>
-
-
-
-
-  Total obligated:       $1,029,985,310.17
+</pre>
+</body>
+</html>
